JS in footer done, styling needs to be fixed, the background img is not responsive - index above instead of before

--- a/src/index.css
+++ b/src/index.css
@@ -316,6 +316,14 @@ background-color: #e03131;
   margin-block-end: 1em;
 }
 
+.black-color{
+  color: black;
+}
+
+.gray-color{
+  color: gray;
+}
+
 
 
 
